...
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize36"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/exoPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </FrameLayout>

...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10"
            android:clickable="true"
            android:elevation="@dimen/size10"
            android:src="@drawable/ic_full_screen"
...
