...
                        android:text="@string/how"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewSteps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
...
